# condukt

./: AGENTS.md  CHANGELOG.md  README.md  checksum-Elixir.Condukt.Bashkit.NIF.exs  checksum-Elixir.Condukt.Microsandbox.NIF.exs  checksum-Elixir.Condukt.Workflows.NIF.exs  mix.exs
.blick/skills/condukt-elixir-review/: SKILL.md
.github/workflows/: blick-learn.yml  blick.yml  condukt-egress.yml  condukt.yml  release.yml  website.yml
docs/: remote-runtime.md
guides/: agents.md  anonymous_workflows.md  getting_started.md  http_routes.md  installation.md  mcp.md  net.md  network_policy.md  one_shot_runs.md  overview.md  project_instructions.md  sandbox.md  subagents.md  telemetry.md  tools.md  workflows.md
lib/: condukt.ex
lib/condukt/: agent.ex  agent_runtime.ex  anonymous_run.ex  application.ex  context.ex  mcp.ex  operation.ex  phoenix.ex  plug.ex  sandbox.ex  session.ex  session_id.ex  telemetry.ex  tool.ex  tools.ex  workflows.ex
lib/condukt/agent_runtimes/: claude.ex  cli.ex  codex.ex  native.ex
lib/condukt/engine/: cli.ex
lib/condukt/mcp/: auth.ex  client.ex  json_rpc.ex  registry.ex  server.ex  sse.ex  tool.ex  transport.ex
lib/condukt/mcp/transport/: http_sse.ex  stdio.ex  streamable_http.ex
lib/condukt/microsandbox/: nif.ex
lib/condukt/sandbox/: kubernetes.ex  local.ex  microsandbox.ex  net.ex  network_policy.ex  virtual.ex
lib/condukt/sandbox/kubernetes/: exec.ex  pod_spec.ex  state.ex  workspace_source.ex
lib/condukt/sandbox/microsandbox/: state.ex
lib/condukt/sandbox/net/: agent_decider.ex  ca.ex  context.ex  decider.ex  event.ex  hosts.ex  k8s.ex  policy.ex  request.ex  rule.ex  sink.ex
lib/condukt/sandbox/net/k8s/: control_bridge.ex  control_reader.ex  manifests.ex
lib/condukt/sandbox/net/rule/: allow_hosts.ex  decide.ex  deny_hosts.ex
lib/condukt/sandbox/net/sink/: log.ex  process.ex
lib/condukt/sandbox/network_policy/: agent_decider.ex  ca.ex  context.ex  decider.ex  event.ex  hosts.ex  k8s.ex  request.ex
lib/condukt/sandbox/network_policy/k8s/: control_bridge.ex  control_channel.ex  control_channel_supervisor.ex  control_reader.ex  manifests.ex  port_forward.ex
lib/condukt/sandbox/network_policy/k8s/port_forward/: codec.ex
lib/condukt/session_store/: disk.ex  memory.ex
lib/condukt/tool/: inline.ex
lib/condukt/tools/: bash.ex  read.ex  subagent.ex
lib/condukt/workflows/: compiler.ex  document.ex  dsl.ex  executor.ex  expr.ex  hcl_compiler.ex  nif.ex  schema.ex  tool_registry.ex  validator.ex
lib/condukt/workflows/runtime/: worker.ex
lib/mix/tasks/: condukt.check.ex  condukt.compile.ex  condukt.run.ex  condukt.workspace.prepare.ex
native/condukt_bashkit/: build.rs
native/condukt_egress/: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
native/condukt_egress/src/: control_bridge.rs  main.rs  netfilter.rs  proxy.rs
native/condukt_egress/src/proxy/: conn.rs  control.rs  event.rs  h2.rs  http1.rs  mod.rs  orig_dst.rs  policy.rs  sni.rs  tls.rs
native/condukt_microsandbox/: Cargo.toml  README.md  build.rs
native/condukt_microsandbox/src/: lib.rs
native/condukt_workflows/: Cargo.toml
native/condukt_workflows/src/: compiler.rs  error.rs  lib.rs  parse.rs  value.rs
priv/schemas/: condukt.workflow.schema.json
scripts/: patch_nif_fini_array.py  smoke_net.exs  smoke_net_agent_decider.exs  workflows_smoke_test.exs
test/: condukt_test.exs  test_helper.exs
test/condukt/: agent_runtime_test.exs  anonymous_run_test.exs  context_test.exs  operation_test.exs  plug_test.exs  sandbox_test.exs  session_assigns_test.exs  session_id_test.exs  session_message_to_req_llm_test.exs  session_store_disk_test.exs  session_test.exs  workflows_test.exs
test/condukt/engine/: cli_test.exs
test/condukt/mcp/: auth_test.exs  json_rpc_test.exs  registry_test.exs  server_test.exs  sse_test.exs  tool_test.exs
test/condukt/mcp/transport/: http_sse_test.exs  stdio_test.exs  streamable_http_test.exs
test/condukt/sandbox/: kubernetes_config_test.exs  kubernetes_test.exs  microsandbox_live_test.exs  microsandbox_test.exs  net_test.exs  network_policy_test.exs
test/condukt/sandbox/kubernetes/: pod_spec_test.exs  workspace_source_test.exs
test/condukt/sandbox/net/: ca_test.exs  decider_test.exs  policy_test.exs  request_test.exs
test/condukt/sandbox/net/k8s/: control_reader_test.exs  manifests_test.exs
test/condukt/sandbox/network_policy/: ca_test.exs  decider_test.exs  request_test.exs
test/condukt/sandbox/network_policy/k8s/: control_bridge_test.exs  control_channel_supervisor_test.exs  control_channel_test.exs  control_reader_test.exs  manifests_test.exs  port_forward_test.exs
test/condukt/sandbox/network_policy/k8s/port_forward/: codec_test.exs
test/condukt/tools/: subagent_test.exs
test/condukt/workflows/: agent_step_test.exs  compiler_test.exs  document_test.exs  executor_test.exs  expr_test.exs  exs_workflow_test.exs  hcl_compiler_test.exs  hcl_workflow_test.exs  mcp_workflow_test.exs  schema_test.exs  starlark_compile_test.exs  tool_step_test.exs  validator_test.exs
test/mix/tasks/: condukt_check_test.exs  condukt_compile_test.exs  condukt_run_test.exs  condukt_workspace_prepare_test.exs
test/support/fixtures/mcp/: echo_server.exs
website/: .gitignore  eleventy.config.mjs  package-lock.json  package.json
website/scripts/: generate-brand-assets.mjs  generate-social-images.mjs
website/src/: index.njk
website/src/_data/: site.js
website/src/_includes/layouts/: base.njk
website/src/assets/: styles.css
website/src/blog/: blog.njk
website/src/blog/posts/: agent-session-secrets.md  coding-agents-as-runtimes.md  kubernetes-sandbox.md  microsandbox.md  posts.11tydata.js  sandboxes-for-tool-calls.md  the-network-is-the-open-side-of-the-sandbox.md  workflows-graph-with-room-for-agents.md
website/src/static/: site.webmanifest
