[package]
name = "condukt_egress"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Egress sidecar for Condukt's Sandbox.Net layer: transparent proxy plus iptables setup"
publish = false

[[bin]]
name = "condukt-egress"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tls-parser = "0.12"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
# Small, single binary for distroless containers. We trade compile time for
# image size: thin-LTO, panic=abort, strip symbols.
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
